SF-2218 Fix audio player convering scripture scrollbar

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
@@ -1,10 +1,8 @@
 @import '../checking-global-vars';
 
 :host {
-  position: absolute;
-  height: 100%;
-  width: 100%;
   display: flex;
+  overflow-y: auto;
 }
 
 app-text {
